# Airgent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  bootstrap.py  cli.py  main.py  tui.py
app/agents/: context.py  prompts.py  registry.py  runner.py
app/agents/configs/: root_assistant.yaml
app/api/routes/: agent.py  cron.py  health.py  memory.py  session.py
app/api/schemas/: agent.py  cron.py  health.py  memory.py  session.py
app/core/: __init__.py  config.py  errors.py  openai_config.py
app/cron/: service.py
app/memory/: __init__.py  context_builder.py  store.py
app/sessions/: __init__.py  factory.py  session.py
app/tools/: bash_tools.py  file_tools.py  memory_tools.py  registry.py  skill_tools.py
app/web/static/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  cron.md  openai_agents_sdk_best_practices.md
docs/agent/: new-agent.md  skills.md  tools.md
scripts/: install.sh
skills/context-builder/: SKILL.md
tests/: test_agent_progress.py  test_agent_registry.py  test_bash_tools.py  test_file_tools.py  test_settings_env.py  test_store.py
