[project]
name = "airgent"
version = "0.1.0"
description = "Personal agent runtime with CLI, API, WebUI, and local memory."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.109.0",
    "openai-agents>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
airgent = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
